Diferentes métodos de navegación, modelos de navegación MasterDetail y Tabbed, Manejo de múltiples pilas de navegación

--- a/TheContacts/TheContacts/Pages/ContactDetailsPage.xaml
+++ b/TheContacts/TheContacts/Pages/ContactDetailsPage.xaml
@@ -33,6 +33,8 @@
                        FontAttributes="Bold"
                        FontSize="Large"></Label> 
             </Grid>
+            <Button Text="Return Data"
+                    Command="{Binding ReturnCommand}"></Button>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
